<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="acc_action_end_call">Hang up</string>
    <string name="acc_call_options">Call options</string>
    <string name="acc_video_call_options">Video call options</string>
    <string name="action_add_number">Add number</string>
    <string name="action_add_people">Add people</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_call">Call</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_chat">Chat</string>
    <string name="action_copy_message">Copy message</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="action_edit_message">Edit message</string>
    <string name="action_forward_media_moji">Forward Moji</string>
    <string name="action_forward_media_photo">Forward photo</string>
    <string name="action_group_chat_notification_off">Disable notifications</string>
    <string name="action_group_chat_notification_on">Enable notifications</string>
    <string name="action_headset">Headset</string>
    <string name="action_join_ongoing_call">Join call</string>
    <string name="action_leave">Leave</string>
    <string name="action_mark_unread">Mark unread</string>
    <string name="action_mute">Mute</string>
    <string name="action_open_moji_link">Open link</string>
    <string name="action_participants">Participants</string>
    <string name="action_quote_message">Quote message</string>
    <string name="action_remove_contact">Remove contact</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_message">Remove message</string>
    <string name="action_rename_group">Rename group</string>
    <string name="action_ringtone_options">Ringtone options</string>
    <string name="action_save_media_photo">Save photo</string>
    <string name="action_save_number">Save number</string>
    <string name="action_save_video_message">Save to gallery</string>
    <string name="action_schedule_a_meeting">Schedule a call</string>
    <string name="action_search">Search contacts, conversations and messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_dialpad">Show dial pad</string>
    <string name="action_show_timestamp">Timestamp</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_translate_message">Translate message</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_via_skype">Send via Skype</string>
    <string name="action_via_sms">Send via SMS</string>
    <string name="action_video_call">Video call</string>
    <string name="action_view_profile">View profile</string>
    <string name="header_add_participants">Add participants</string>
    <string name="header_contacts">Contacts</string>
    <string name="header_debug_settings">Debug</string>
    <string name="header_email_address">Email address</string>
    <string name="header_emoticons_and_mojis">Emoticons and Mojis</string>
    <string name="header_fullname">Full name</string>
    <string name="header_privacy">Privacy</string>
    <string name="header_skypename">Skype Name</string>
    <string name="header_voice_video_calls">Voice and video calls</string>
    <string name="label_allow_direct_connections">Direct connections only</string>
    <string name="label_allow_direct_connections_desc">"When you enable direct connections only, your IP address will be kept hidden when you call people who aren't on your people list. This may delay your call setup time."</string>
    <string name="label_allow_ims_from">Allow IMs from</string>
    <string name="label_allow_targeted_ads">Allow Microsoft targeted ads</string>
    <string name="label_allow_targeted_ads_desc">including use of Skype profile age and gender</string>
    <string name="label_answer_calls_automatically">Answer calls automatically</string>
    <string name="label_automatically_add_friends">Automatically add friends</string>
    <string name="label_email">Email</string>
    <string name="label_emoticons_animated">Use animated emoticons</string>
    <string name="label_emoticons_big">Use large emoticons</string>
    <string name="label_manage_how_people_find_me">Manage how people find me</string>
    <string name="label_manage_how_people_find_me_description">Choose which contact details to use</string>
    <string name="label_mojis_auto_download_over_wifi_only">Automatically download Mojis over Wifi only</string>
    <string name="label_mojis_data">Data</string>
    <string name="label_next">Next</string>
    <string name="label_ok">OK</string>
    <string name="label_password">Password</string>
    <string name="label_problems_signing_in">Problems signing in?</string>
    <string name="label_receive_calls_from">Receive calls from</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_save">Save</string>
    <string name="label_save_my_pwd">Save my password</string>
    <string name="label_save_my_pwd_summary">Sign in without re-entering my password</string>
    <string name="label_show_tech_info_menu">Technical info</string>
    <string name="label_show_tech_info_menu_desc">Display technical call information</string>
    <string name="label_skypename">Skype Name</string>
    <string name="label_sync_to_phone_book">Copy to phone book</string>
    <string name="label_video_message">Video message</string>
    <string name="label_video_monitor">Display video calls in the background</string>
    <string name="label_video_quality">Video quality</string>
    <string name="label_your_name">Full name</string>
    <string name="message_signing_in_enter_password">Password, enter your password here</string>
    <string name="message_signing_in_enter_skypename">Skype Name, enter your Skype Name here</string>
    <string name="text_hint_password">Password</string>
    <string name="key_ad_unit">adUnitId</string>
    <string name="key_allow_calls_from_mode">allowCallsFrom</string>
    <string name="key_allow_direct_connections">allowDirectConnections</string>
    <string name="key_allow_ims_from_mode">allowImsFromMode</string>
    <string name="key_allow_targeted_ads">allowTargetedAds</string>
    <string name="key_category_contacts">categoryContacts</string>
    <string name="key_category_debug">categoryDebug</string>
    <string name="key_category_emoticons_and_mojis">categoryEmoticonsAndMojis</string>
    <string name="key_category_privacy">categoryPrivacy</string>
    <string name="key_category_video">categoryVideo</string>
    <string name="key_contacts_sync_mode">contactSyncMode</string>
    <string name="key_emoticons_show_animated">emoticonsShowAnimated</string>
    <string name="key_emoticons_show_big">emoticonsShowBig</string>
    <string name="key_enable_automatically_find_friends">enableAutoBuddy</string>
    <string name="key_enable_moji">enableMoji</string>
    <string name="key_fliks_auto_download_over_wifi_only">fliksAutoDownloadOverWifiOnly</string>
    <string name="key_high_quality_video">videoQualityMode</string>
    <string name="key_phone_verification_completed">phoneVerificationCompleted</string>
    <string name="key_privacy_save_user_pwd">saveUserPwd</string>
    <string name="key_save_logs">saveLogs</string>
    <string name="key_shake_debug">enableShake</string>
    <string name="key_short_circuit_manage_aliases">shortCircuitManageAliases</string>
    <string name="key_show_call_quality_feedback">showCallQualityFeedback</string>
    <string name="key_show_technical_info">showCallTechInfo</string>
    <string name="key_user_wants_auto_answer">userWantsAutoAnswer</string>
    <string name="key_video_monitor">videoMonitor</string>
</resources>