<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/chat_context_menu_copy" android:title="@string/action_copy_message" />
    <item android:id="@id/chat_context_menu_quote" android:title="@string/action_quote_message" />
    <item android:id="@id/chat_context_menu_translate" android:title="@string/action_translate_message" />
    <item android:id="@id/chat_context_menu_edit" android:title="@string/action_edit_message" />
    <item android:id="@id/chat_context_menu_open_link" android:visible="false" android:title="@string/action_open_moji_link" />
    <item android:id="@id/chat_context_menu_remove" android:title="@string/action_remove_message" />
    <item android:id="@id/chat_context_menu_save_media" android:title="@string/action_save_media_photo" />
    <item android:id="@id/chat_context_menu_forward_photo" android:title="@string/action_forward_media_photo" />
    <item android:id="@id/chat_context_menu_forward_moji" android:title="@string/action_forward_media_moji" />
    <item android:id="@id/chat_context_menu_timestamp" android:title="@string/action_show_timestamp" />
    <item android:id="@id/chat_context_menu_save_vim" android:title="@string/action_save_video_message" />
</menu>