<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/actionbar_video" android:id="@id/chat_menu_item_call_video" android:title="@string/action_video_call" app:showAsAction="always" />
    <item android:id="@id/chat_menu_item_call_options" android:title="@string/acc_call_options" app:showAsAction="always" app:actionViewClass="com.skype.android.widget.CallActionSpinner" />
    <item android:icon="@drawable/actionbar_camera" android:id="@id/chat_menu_item_video_message" android:visible="false" android:title="@string/label_video_message" app:showAsAction="ifRoom" />
    <item android:id="@id/chat_menu_item_send_sms" android:visible="false" android:title="@string/action_via_sms" />
    <item android:id="@id/chat_menu_item_send_via_skype" android:visible="false" android:title="@string/action_via_skype" />
    <item android:id="@id/chat_menu_item_add" android:orderInCategory="0" android:title="@string/header_add_participants" />
    <item android:id="@id/chat_menu_item_mark_unread" android:orderInCategory="0" android:title="@string/action_mark_unread" />
    <item android:id="@id/chat_menu_item_schedule_a_meeting" android:visible="false" android:orderInCategory="0" android:title="@string/action_schedule_a_meeting" />
    <item android:id="@id/chat_menu_item_add_favorite" android:orderInCategory="0" android:title="@string/action_add_to_favorites" />
    <item android:id="@id/chat_menu_item_remove_favorite" android:orderInCategory="0" android:title="@string/action_remove_from_favorites" />
    <item android:id="@id/chat_menu_item_edit_contact" android:orderInCategory="1" android:title="@string/action_edit_contact" />
    <item android:id="@id/chat_menu_item_save_so_number" android:visible="false" android:orderInCategory="1" android:title="@string/action_save_number" />
    <item android:id="@id/chat_menu_item_profile" android:orderInCategory="2" android:title="@string/action_view_profile" />
    <item android:id="@id/chat_menu_item_block_contact" android:orderInCategory="3" android:title="@string/action_block_contact" />
    <item android:id="@id/chat_menu_item_unblock_contact" android:orderInCategory="3" android:title="@string/action_unblock_contact" />
    <item android:id="@id/chat_menu_item_remove_contact" android:orderInCategory="4" android:title="@string/action_remove_contact" />
    <item android:id="@id/chat_menu_item_custom_ringtone" android:visible="true" android:orderInCategory="5" android:title="@string/action_ringtone_options" />
</menu>