<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/header_emoticons_and_mojis" android:key="@string/key_category_emoticons_and_mojis">
        <com.skype.android.util.accessibility.AccessibleSwitchPreference android:title="@string/label_emoticons_animated" android:key="@string/key_emoticons_show_animated" android:defaultValue="true" />
        <com.skype.android.util.accessibility.AccessibleSwitchPreference android:title="@string/label_emoticons_big" android:key="@string/key_emoticons_show_big" android:defaultValue="true" />
        <com.skype.android.util.accessibility.AccessibleSwitchPreference android:title="@string/label_mojis_data" android:key="@string/key_fliks_auto_download_over_wifi_only" android:summary="@string/label_mojis_auto_download_over_wifi_only" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>