<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/actionbar_video" android:id="@id/chat_menu_item_call_video" android:title="@string/action_video_call" app:showAsAction="always" />
    <item android:id="@id/chat_menu_item_call_options" android:title="@string/acc_call_options" app:showAsAction="always" app:actionViewClass="com.skype.android.widget.CallActionSpinner" />
    <item android:icon="@drawable/actionbar_ongoing_call" android:id="@id/chat_menu_item_join_shortcut" android:title="@string/action_join_ongoing_call" app:showAsAction="ifRoom" />
    <item android:id="@id/chat_menu_item_add" android:orderInCategory="0" android:title="@string/header_add_participants" />
    <item android:id="@id/chat_menu_item_mark_unread" android:orderInCategory="0" android:title="@string/action_mark_unread" />
    <item android:id="@id/chat_menu_item_add_favorite" android:title="@string/action_add_to_favorites" />
    <item android:id="@id/chat_menu_item_remove_favorite" android:title="@string/action_remove_from_favorites" />
    <item android:id="@id/chat_menu_item_topic" android:title="@string/action_rename_group" />
    <item android:id="@id/chat_menu_item_participants" android:title="@string/action_participants" />
    <item android:id="@id/chat_menu_item_leave" android:title="@string/action_leave" />
    <item android:id="@id/chat_menu_item_group_notification_on" android:visible="false" android:title="@string/action_group_chat_notification_on" />
    <item android:id="@id/chat_menu_item_group_notification_off" android:visible="false" android:title="@string/action_group_chat_notification_off" />
    <item android:id="@id/chat_menu_item_custom_ringtone" android:visible="true" android:title="@string/action_ringtone_options" />
</menu>