<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/header_contacts" android:key="@string/key_category_contacts">
        <com.skype.android.app.settings.AutoBuddyDialogPreference android:title="@string/label_automatically_add_friends" android:key="@string/key_enable_automatically_find_friends" android:defaultValue="1" android:positiveButtonText="@string/label_ok" android:negativeButtonText="@string/action_cancel" />
        <com.skype.android.app.settings.ContactSyncDialogPreference android:title="@string/label_sync_to_phone_book" android:key="@string/key_contacts_sync_mode" android:defaultValue="1" android:positiveButtonText="@string/label_ok" android:negativeButtonText="@string/action_cancel" />
    </PreferenceCategory>
</PreferenceScreen>