<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/profile_menu_group">
        <item android:id="@id/profile_item_favorite" android:title="@string/action_add_to_favorites" />
        <item android:id="@id/profile_item_remove_favorite" android:visible="false" android:title="@string/action_remove_from_favorites" />
        <item android:id="@id/profile_menu_item_edit" android:title="@string/action_edit_contact" />
        <item android:id="@id/profile_menu_item_block" android:title="@string/action_block_contact" />
        <item android:id="@id/profile_menu_item_unblock" android:visible="false" android:title="@string/action_unblock_contact" />
        <item android:id="@id/profile_menu_item_remove" android:title="@string/action_remove_contact" />
    </group>
</menu>