<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_action_search" android:id="@id/menu_search" android:title="@string/action_search" app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:icon="@drawable/actionbar_dialpad" android:id="@id/menu_dial" android:title="@string/action_call" app:showAsAction="never" />
    <item android:icon="@drawable/actionbar_chat" android:id="@id/menu_start_conversation" android:title="@string/action_chat" app:showAsAction="never" />
    <group android:id="@id/overflow">
        <item android:id="@id/menu_add_people" android:orderInCategory="0" android:title="@string/action_add_people" />
        <item android:id="@id/menu_add_number" android:orderInCategory="0" android:title="@string/action_add_number" />
        <item android:id="@id/menu_item_settings" android:orderInCategory="1" android:title="@string/action_settings" />
        <item android:id="@id/menu_item_sign_out" android:orderInCategory="1" android:title="@string/action_sign_out" />
    </group>
</menu>