<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/sign_up_scroll_view" android:background="@color/skype_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingTop="@dimen/sign_up_fields_padding" android:layout_height="wrap_content" style="@style/SigninContent">
        <com.skype.android.widget.AccessibleEditText android:ellipsize="end" android:id="@id/sign_up_your_name_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/label_your_name" android:ems="10" android:singleLine="true" android:inputType="textPersonName" android:contentDescription="@string/header_fullname" style="@style/SignUpInputField">
            <requestFocus />
        </com.skype.android.widget.AccessibleEditText>
        <com.skype.android.widget.AccessibleEditText android:ellipsize="end" android:id="@id/sign_up_skype_name_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/label_skypename" android:ems="10" android:singleLine="true" android:inputType="textPersonName" android:contentDescription="@string/header_skypename" style="@style/SignUpInputField" />
        <com.skype.android.widget.AccessibleEditText android:ellipsize="end" android:id="@id/sign_up_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/label_password" android:ems="10" android:singleLine="true" android:inputType="textPassword" android:contentDescription="@string/label_password" style="@style/SignUpInputField" />
        <com.skype.android.widget.AccessibleEditText android:ellipsize="end" android:id="@id/sign_up_password_confirm_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/label_repeat_password" android:ems="10" android:singleLine="true" android:inputType="textPassword" android:contentDescription="@string/label_password" style="@style/SignUpInputField" />
        <com.skype.android.widget.AccessibleEditText android:ellipsize="end" android:id="@id/sign_up_email_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/label_email" android:ems="10" android:singleLine="true" android:inputType="textEmailAddress" android:contentDescription="@string/header_email_address" style="@style/SignUpInputField" />
        <ImageButton android:layout_gravity="center" android:id="@id/sign_up_continue_button" android:background="@drawable/btn_on_blue_big_circle_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding4b" android:layout_marginBottom="@dimen/padding4b" android:src="@drawable/continue_arrow_right_selector" android:contentDescription="@string/label_save" />
    </LinearLayout>
</ScrollView>